--- a/useful_scripts/geolocationExample/index.html
+++ b/useful_scripts/geolocationExample/index.html
@@ -16,6 +16,8 @@
 	<div id= "container"></div>
 
 	<script src="js/gettingGeolocation.js"></script>
+	<!--<script src="js/scripts.js"></script>-->
+
 	
 </body>
 
