--- a/useful_scripts/tooltip/index.html
+++ b/useful_scripts/tooltip/index.html
@@ -20,5 +20,8 @@
     </div>
 
 <script src="js/scripts.js"></script>
+<script>
+	tooltip(document.querySelectorAll("[title]"));
+</script>
 </body>
 </html>
